--- a/client/src/main/resources/client/scenes/NoteOverview.fxml
+++ b/client/src/main/resources/client/scenes/NoteOverview.fxml
@@ -14,7 +14,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.NoteOverviewCtrl">
    <children>
-      <HBox prefHeight="400.0" prefWidth="600.0">
+      <HBox prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <VBox prefHeight="400.0" prefWidth="235.0">
                <children>
@@ -40,13 +40,13 @@
                               </Text>
                            </children>
                         </StackPane>
-                        <StackPane prefHeight="46.0" prefWidth="76.0" />
-                        <StackPane prefHeight="50.0" prefWidth="56.0">
+                        <StackPane prefHeight="46.0" prefWidth="40.0">
                            <children>
                               <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#createNote" prefHeight="30.0" prefWidth="46.0" />
                               <Text mouseTransparent="true" strokeType="OUTSIDE" strokeWidth="0.0" text="Add" textAlignment="CENTER" wrappingWidth="55.19998397827146" />
                            </children>
                         </StackPane>
+                        <StackPane prefHeight="46.0" prefWidth="82.0" />
                      </children>
                   </HBox>
                </children>
@@ -65,10 +65,16 @@
                   </StackPane>
                   <HBox prefHeight="117.0" prefWidth="230.0">
                      <children>
-                        <StackPane prefHeight="50.0" prefWidth="101.0" />
+                        <StackPane prefHeight="50.0" prefWidth="89.0">
+                           <children>
+                              <TextField prefHeight="26.0" prefWidth="73.0" promptText="Search" />
+                              <StackPane prefHeight="50.0" prefWidth="80.0" />
+                           </children>
+                        </StackPane>
+                        <StackPane prefHeight="50.0" prefWidth="23.0" />
                         <StackPane prefHeight="50.0" prefWidth="57.0">
                            <children>
-                              <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="52.0" text="Delete" />
+                              <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="56.0" text="Delete" />
                            </children>
                         </StackPane>
                         <StackPane prefHeight="50.0" prefWidth="61.0">
