--- a/client/src/main/resources/client/scenes/NoteOverview.fxml
+++ b/client/src/main/resources/client/scenes/NoteOverview.fxml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.Blend?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
+<?import javafx.scene.web.WebView?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.NoteOverviewCtrl">
    <children>
       <HBox prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -86,10 +82,21 @@
                   </HBox>
                </children>
             </VBox>
-            <StackPane prefHeight="400.0" prefWidth="300.0">
+            <StackPane prefHeight="400.0" prefWidth="273.0">
                <children>
-                  <TextArea prefHeight="200.0" prefWidth="200.0" />
+                  <WebView fx:id="webview" cache="true" cacheHint="SPEED" depthTest="ENABLE" prefHeight="400.0" prefWidth="221.0">
+                     <effect>
+                        <Blend />
+                     </effect>
+                  </WebView>
                </children>
+               <effect>
+                  <InnerShadow>
+                     <color>
+                        <Color red="0.4736842215061188" green="0.4736842215061188" blue="0.4736842215061188" />
+                     </color>
+                  </InnerShadow>
+               </effect>
             </StackPane>
          </children>
       </HBox>
