--- a/client/src/main/resources/client/scenes/NoteOverview.fxml
+++ b/client/src/main/resources/client/scenes/NoteOverview.fxml
@@ -56,7 +56,7 @@
                   </StackPane>
                   <StackPane prefHeight="382.0" prefWidth="230.0">
                      <children>
-                        <TextArea fx:id="content" onMouseClicked="#updateNote" onTouchPressed="#updateNote" prefHeight="322.0" prefWidth="208.0" promptText="Content" />
+                        <TextArea fx:id="content" onKeyTyped="#updateWebView" onMouseClicked="#updateNote" onTouchPressed="#updateNote" prefHeight="322.0" prefWidth="208.0" promptText="Content" />
                      </children>
                   </StackPane>
                   <HBox prefHeight="117.0" prefWidth="230.0">
