--- a/client/src/main/resources/client/styles/notes.css
+++ b/client/src/main/resources/client/styles/notes.css
@@ -1,9 +1,23 @@
-h1 {
+body {
+    background-color: #f5f5f5;
     font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
+    margin: 0.3;
+    padding: 0.3;
     color: #333;
-    background-color: #ff0000;
-    margin: 0;
-    padding: 0;
+}
+
+h1 {
+    font-size: 1.5em;
+}
+
+h2 {
+    font-size: 1.2em;
+}
+
+h3 {
+    font-size: 1em;
+}
+
+p {
+    font-size: 1em;
 }
