--- a/client/src/main/resources/client/scenes/NoteOverview.fxml
+++ b/client/src/main/resources/client/scenes/NoteOverview.fxml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Blend?>
 <?import javafx.scene.effect.InnerShadow?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -57,15 +64,17 @@
                   </StackPane>
                   <StackPane prefHeight="382.0" prefWidth="230.0">
                      <children>
-                        <TextArea fx:id="content" onKeyTyped="#updateWebView" onMouseClicked="#updateNote" onTouchPressed="#updateNote" prefHeight="322.0" prefWidth="208.0" promptText="Content" />
+                        <TextArea fx:id="content" onKeyTyped="#updateWebView" onMouseClicked="#updateNote" onTouchPressed="#updateNote" prefHeight="330.0" prefWidth="217.0" promptText="Content" />
                      </children>
                   </StackPane>
                   <HBox prefHeight="117.0" prefWidth="230.0">
                      <children>
                         <StackPane prefHeight="50.0" prefWidth="89.0">
                            <children>
-                              <TextField prefHeight="26.0" prefWidth="73.0" promptText="Search" />
-                              <StackPane prefHeight="50.0" prefWidth="90.0" />
+                              <StackPane prefHeight="50.0" prefWidth="52.0">
+                                 <children>
+                                    <ChoiceBox fx:id="tagsmenu" prefWidth="150.0" />
+                                 </children></StackPane>
                            </children>
                         </StackPane>
                         <StackPane prefHeight="50.0" prefWidth="6.0" />
