--- a/client/src/main/resources/client/scenes/NoteOverview.fxml
+++ b/client/src/main/resources/client/scenes/NoteOverview.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
@@ -30,9 +31,10 @@
                               <ChoiceBox fx:id="languageMenu" layoutX="24.0" layoutY="18.0" prefWidth="150.0" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane maxHeight="40.0" maxWidth="1.7976931348623157E308" minHeight="20.0" minWidth="0.0" prefHeight="31.0" prefWidth="130.0" VBox.vgrow="ALWAYS">
+                        <AnchorPane maxHeight="83.0" maxWidth="1.7976931348623157E308" minHeight="20.0" minWidth="0.0" prefHeight="83.0" prefWidth="197.0" VBox.vgrow="ALWAYS">
                            <children>
-                              <TextField fx:id="searchBox" onKeyTyped="#updateList" promptText="%search.prompt" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <TextField fx:id="searchBox" onKeyTyped="#updateList" prefHeight="46.0" prefWidth="197.0" promptText="%search.prompt" AnchorPane.bottomAnchor="33.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <CheckBox alignment="BOTTOM_CENTER" layoutY="57.0" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" text="%content.search" />
                            </children>
                         </AnchorPane>
                         <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="284.0" prefWidth="170.0" VBox.vgrow="ALWAYS">
