--- a/client/src/main/resources/client/scenes/NoteOverview.fxml
+++ b/client/src/main/resources/client/scenes/NoteOverview.fxml
@@ -85,6 +85,11 @@
                                           </StackPane>
                                        </children>
                                     </AnchorPane>
+                                    <AnchorPane prefHeight="57.0" prefWidth="51.0">
+                                       <children>
+                                          <Button fx:id="clear" alignment="CENTER" disable="true" layoutX="4.0" layoutY="8.0" mnemonicParsing="false" onAction="#clearTags" prefHeight="39.0" prefWidth="44.0" text="Clear" />
+                                       </children>
+                                    </AnchorPane>
                                  </children>
                               </HBox>
                            </children>
