--- a/client/src/main/resources/client/scenes/NoteOverview.fxml
+++ b/client/src/main/resources/client/scenes/NoteOverview.fxml
@@ -15,7 +15,6 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.web.WebView?>
 
-
 <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.NoteOverviewCtrl">
    <children>
       <VBox prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -148,12 +147,14 @@
                                                          <font>
                                                             <Font name="Arial" size="15.0" />
                                                          </font>
+                                                         <graphic>
+                                                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="⟳" textAlignment="CENTER" wrappingWidth="24.0">
+                                                               <font>
+                                                                  <Font size="32.0" />
+                                                               </font>
+                                                            </Text>
+                                                         </graphic>
                                                       </Button>
-                                                      <Text layoutY="20.0" strokeType="OUTSIDE" strokeWidth="0.0" text="⟳" textAlignment="CENTER" wrappingWidth="24.0">
-                                                         <font>
-                                                            <Font size="32.0" />
-                                                         </font>
-                                                      </Text>
                                                    </children>
                                                    <HBox.margin>
                                                       <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
@@ -169,12 +170,14 @@
                                                          <padding>
                                                             <Insets bottom="4.0" left="4.0" top="4.0" />
                                                          </padding>
+                                                         <graphic>
+                                                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="-" textAlignment="CENTER" wrappingWidth="24.0">
+                                                               <font>
+                                                                  <Font size="32.0" />
+                                                               </font>
+                                                            </Text>
+                                                         </graphic>
                                                       </Button>
-                                                      <Text layoutY="20.0" strokeType="OUTSIDE" strokeWidth="0.0" text="-" textAlignment="CENTER" wrappingWidth="24.0">
-                                                         <font>
-                                                            <Font size="32.0" />
-                                                         </font>
-                                                      </Text>
                                                    </children>
                                                    <HBox.margin>
                                                       <Insets bottom="44.0" left="4.0" top="4.0" />
@@ -186,12 +189,14 @@
                                                          <font>
                                                             <Font name="Arial" size="15.0" />
                                                          </font>
+                                                         <graphic>
+                                                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="+" textAlignment="CENTER" wrappingWidth="24.0">
+                                                               <font>
+                                                                  <Font size="32.0" />
+                                                               </font>
+                                                            </Text>
+                                                         </graphic>
                                                       </Button>
-                                                      <Text layoutY="20.0" strokeType="OUTSIDE" strokeWidth="0.0" text="+" textAlignment="CENTER" wrappingWidth="24.0">
-                                                         <font>
-                                                            <Font size="32.0" />
-                                                         </font>
-                                                      </Text>
                                                    </children>
                                                    <HBox.margin>
                                                       <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
@@ -221,12 +226,14 @@
                                        <font>
                                           <Font name="Arial" size="15.0" />
                                        </font>
+                                       <graphic>
+                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="✓" textAlignment="CENTER" wrappingWidth="24.0">
+                                             <font>
+                                                <Font size="20.0" />
+                                             </font>
+                                          </Text>
+                                       </graphic>
                                     </Button>
-                                    <Text layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" text="✓" textAlignment="CENTER" wrappingWidth="24.0">
-                                       <font>
-                                          <Font size="20.0" />
-                                       </font>
-                                    </Text>
                                  </children>
                               </AnchorPane>
                            </children>
